fix: Fix packages path

--- a/build.project.json
+++ b/build.project.json
@@ -15,13 +15,16 @@
       }
     },
     "ReplicatedStorage": {
+      "Packages": {
+        "$path": "packages"
+      },
       "Shared": {
         "$path": "out/shared",
-        "Packages": {
-          "$path": "packages"
-        },
         "GetReceived": {
           "$className": "RemoteFunction"
+        },
+        "Generate": {
+          "$className": "RemoteEvent"
         }
       },
       "Client": {
